@@ -1,8 +1,8 @@
 Bundle: VR
 Priority: recommended
 Contains: MASS class nnet spatial
-Version: 7.2-25
-Date: 2005-12-30
+Version: 7.2-26
+Date: 2006-01-26
 Depends: R (>= 2.3.0), graphics, stats
 Suggests: lattice, nlme, survival
 Author: S original by Venables & Ripley.
@@ -13,4 +13,4 @@ BundleDescription: Functions and datasets to support Venables and
   Ripley, 'Modern Applied Statistics with S' (4th edition).
 License: GPL (version 2 or later)  See file LICENCE.
 URL: http://www.stats.ox.ac.uk/pub/MASS4/
-Packaged: Fri Dec 30 17:45:29 2005; ripley
+Packaged: Thu Jan 26 09:46:53 2006; ripley
